# desktop

./: .generated-hagiscript-runtime-manifest.json  .gitignore  AGENTS.md  DESIGN.md  Directory.Build.props  PRODUCT.md  README.md  README.zh-CN.md  README_cn.md  build.cmd  build.ps1  build.sh  electron-builder.yml  forge.config.js  forge.store-config.json  hagi18n.yaml  hagindex.yml  package-lock.json  package.json  pyproject.toml  requirements.lock.txt  tailwind.config.js  tsconfig.json  tsconfig.preload.json  vite.config.mjs  vite.preload.config.ts
.hagihub/: settings.yaml
.impeccable/: design.json
config/: store-package.json
docs/: artifact-signing.md  azure-storage-sync.md  bundled-node-toolchain.md  development.md  i18n-hagi18n.md  macos-native-library-troubleshooting.md  msstore-rating-prompt.md  npm-management.md  nuke-cleanup-followup.md  sharing-acceleration.md
nukeBuild/: AzureStorageConfiguration.cs  Build.AzureStorage.cs  Build.Partial.cs  Build.cs  BuildConfig.cs  Directory.Build.props  _build.csproj
nukeBuild.Tests/: ArtifactHybridMetadataBuilderTests.cs  AzureBlobAdapterTests.cs  AzureReleasePublishOrchestratorTests.cs  PCode.Build.Tests.csproj
openspec/: .version  project.md
pybuild/: __init__.py  entry.py  runtime.py  tasks.py  tests_mapping.py  tests_native_index.py  tests_native_plan.py  tests_native_publish.py  tests_native_storage.py
resources/: .runtime-stage.json  distribution-metadata.json  manifest.yml
scripts/: build-macos.js  build-store-package.js  build-store-package.test.js  build-store-purchase-addon.js  bump-version.js  (+73 more)
(+1331 files in other folders)
